change column name at parameter

--- a/app/views/jobs/_Vacancies_lists.html.haml
+++ b/app/views/jobs/_Vacancies_lists.html.haml
@@ -25,7 +25,7 @@
           %td.Vacancy-item__left
             勤務地
           %td.Vacancy-item__right
-            = form.text_field :desctiption, placeholder: 'ここに文章を入力してください'
+            = form.text_field :description, placeholder: 'ここに文章を入力してください'
         %tr.Vacancy-item
           %td.Vacancy-item__left
             給与
