Add haml/scss to vacancies _info faile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "reset";
 @import "modules/Vacancies_lists";
+@import "modules/Vacancies_info";
 @import "font-awesome-sprockets";
 @import "font-awesome";
