--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,1 +1,3 @@
-= render partial: 'Vacancies_lists', locals: { job: @job }
+.Wrapper
+  = render partial: 'Vacancies_lists', locals: { job: @job }
+= render partial: 'Vacancies_info', locals: {}
