--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,3 +1,3 @@
 .Wrapper
-  = render partial: 'Vacancies_lists', locals: { job: @job }
-= render partial: 'Vacancies_info', locals: {}
+  = render partial: 'Vacancies_form', locals: { job: @job }
+= render partial: 'Vacancies_lists', locals: {}
