--- a/app/views/jobs/_Vacancies_lists.html.haml
+++ b/app/views/jobs/_Vacancies_lists.html.haml
@@ -22,7 +22,7 @@
           %td.Text-content__right
             =list.term
       .Bottom-content
-        = link_to '#', class: "Bottom-Contents__btn" do
+        = link_to edit_job_path(list.id), class: "Bottom-Contents__btn", method: :get do
           編集
         = link_to job_path(list.id), class: "Bottom-Contents__btn", method: :delete do
           削除
