--- a/app/views/jobs/_Vacancies_form.html.haml
+++ b/app/views/jobs/_Vacancies_form.html.haml
@@ -84,7 +84,8 @@
 %ul.Bottom-wrapper
   - @lists.each do |list|
     %li.Contents
-      = image_tag list.image1.url, class: 'Top-content' if list.image1.present?
+      .Top-content
+        = image_tag list.image1.url, class: 'Top-content__img' if list.image1.present?
       %table.Middle-content
         %tr.Text-content
           %td.Text-content__left
