--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,20 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title WebHaken
+    %title DispatchSite
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = yield
+  .Header
+    .Header-logo
+      COMPANY LOGO
+    .Header-right
+      = image_tag 'image.png', class: 'Header-right__img'
+      = link_to '#', class: "Header-right__text" do
+        企業担当者はこちら
+      .Header-right__signup
+        Sign Up
+  = yield
+  .Footer
