Add haml scss  at matches controller

--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -127,10 +127,9 @@
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      &__button {
-        
+      &__match-button {
       }
-      &__like {
+      &__match-like {
       }
     }
   }
