--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
       COMPANY LOGO
     .Header-right
       = image_tag 'image.png', class: 'Header-right__img'
-      = link_to '#', class: "Header-right__text" do
+      = link_to jobs_path, class: "Header-right__text" do
         企業担当者はこちら
       .Header-right__signup
         Sign Up
