--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -2,91 +2,56 @@
   box-sizing: border-box;
 }
 
-.Wrapper {
-  max-width: 800px;
-  margin: 0 auto;
+.Top-wrapper {
+  background-color: rebeccapurple;
+  position: relative;
+  &__image {
+    width: 100%;
+    height: 550px;
+  }
+  &__login {
+    position: absolute;
+    top:400px;
+    right:50%;
+  }
 }
 
-.Title-wrapper {
-  text-align: center;
-  background-color: hotpink;
-}
-
-.Job-wrapper{
-  .Upper-contents {
-    text-align: center;
-    background-color: khaki;
-  }
-  .Pr-contents {
-    background-color: lemonchiffon;
-    .Pr-title {
-
-    }
-    .Pr-box {
-      background-color:forestgreen;
-    }
-  }
-  .Image-contents {
-    .Job-images {
-      display:grid;
-      grid-gap: 1rem;
-      height: 300px;
-      grid-template-columns: 2fr 1fr 1fr;
-      &__list1 {
-        background-color: gray;
-        grid-row: 1 / span 2;
-        grid-column: 1.5 / span 2;
-        &--file {
-          display: none;
-        }
-      }
-      &__list {
-        background-color: gray;
-        &--file {
-          display: none;
-        }
-      }
-    }
-  }
-  .Vacancy-contents {
-    .Vacancy-infos {
-      width: 800px;
-      .Vacancy-item {
-        &__left {
-          width: 25%;
-          background-color: lightcoral;
-        }
-        &__right {
-          width: 75%;
-          background-color: lightskyblue;
-        }
-      }
-    }
-  }
-  .Staff-contents {
+.Info-wrapper {
+  // height: 200px;
+  background-color: burlywood;
+  display: flex;
+  .Title {
     background-color: gainsboro;
-    &__title {
-      background-color: gold;
-    }
-    .sales-staffs {
-      &__name {
+    // height: 200px;
+    width: 20%;
+  }
+  .Message-lists{
+    &__box {
+      display: flex;
+      &--date {
+        margin-left: 20px;
       }
-    }
-  }
-  .Pr-contents {
-    // 他のscssで同じものを作成している
-  }
-  .Button-wrapper {
-    // background-color: forestgreen;
-    text-align: center;
-    &__button {
+      &--message {
+        margin-left: 30px;
+      }
     }
   }
 }
 
-.Title {
-  &__text {
+.Message-wrapper {
+  // height: 200px;
+  background-color: saddlebrown;
+  .Message-title {
+   text-align: center;
+  }
+  .Search-box {
     text-align: center;
+    &__input {
+
+    }
+    &__button {
+
+    }
   }
 }
 
