Revert "[WIP]  ユーザートップ画面の実装"

--- a/app/views/jobs/destroy.html.haml
+++ b/app/views/jobs/destroy.html.haml
@@ -1,5 +1,5 @@
 .Contens-row
   .Contents-row__success
     削除が完了しました。
-  = link_to jobs_path, class: "Bottom-Contents__btn" do
+  = link_to root_path, class: "Bottom-Contents__btn" do
     案件入力へ戻る
