--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "reset";
 @import "modules/Vacancies_form";
+@import "modules/job_matches";
+@import "modules/Header";
+@import "modules/Footer";
 @import "font-awesome-sprockets";
 @import "font-awesome";
