Change edit action view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/Vacancies_form";
 @import "modules/Header";
 @import "modules/Footer";
+@import "modules/edit";
 @import "font-awesome-sprockets";
 @import "font-awesome";
