Add matches controller index action

--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -1,3 +1,4 @@
+
 .Top-wrapper
   = image_tag 'image.png', class: 'Top-wrapper__image'
   .Top-wrapper__login
@@ -64,4 +65,4 @@
         = link_to '#', class: "Bottom-Contents__btn", method: :get do
           編集
         = link_to '#', class: "Bottom-Contents__btn", method: :delete do
-          削除
+          いいね
