--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "modules/Vacancies_form";
+@import "modules/job_matches";
 @import "modules/Header";
 @import "modules/Footer";
 @import "modules/edit";
