Add log-in sign-up html scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,6 @@
 @import "modules/Header";
 @import "modules/Footer";
 @import "modules/edit";
+@import "modules/user";
 @import "font-awesome-sprockets";
 @import "font-awesome";
