--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -13,8 +13,8 @@
     justify-content: space-between;
     align-items: center;
     &__img {
-      width: 60px;
-      height: 60px;
+      font-size: 4em;
+      object-fit: cover;
     }
     &__text {
       
