Add font awsome at header view

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -36,7 +36,7 @@
         .FormField__label--normal
           = f.label :profile
         .FormField__input--normal
-          = icon('fas', 'user-circle', class: 'Form__icon')
+          = icon('fas', 'user-circle', class: 'FormField__input--normal--file')
           = f.file_field :image
       .actions
         = f.submit "Create Account", class: 'Button UserButton'
