--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,9 +12,13 @@
     = link_to root_path, class: 'Header-logo' do
       COMPANY LOGO
     .Header-right
-      = icon('fas', 'user-circle', class: 'Header-right__img')
-      = link_to jobs_path, class: "Header-right__text" do
-        企業担当者はこちら
+      - if user_signed_in?
+        .Header-right__img
+          = @users.image
+      - else
+        = icon('fas', 'user-circle', class: 'Header-right__img')
+        = link_to jobs_path, class: "Header-right__text" do
+          企業担当者はこちら
       - if user_signed_in?
         .Header-right__signup
           = link_to destroy_user_session_path, method: :delete do
