--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -13,8 +13,14 @@
     justify-content: space-between;
     align-items: center;
     &__img {
-      font-size: 4em;
+      width: 60px;
+      height: 60px;
+      background-color: rosybrown;
+      &--file{
+      height: 20px;
       object-fit: cover;
+      width: 100%;
+      }
     }
     &__text {
       
