Add show action and View file at matches controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "modules/Vacancies_form";
 @import "modules/job_matches";
 @import "modules/Header";
+@import "modules/job_show";
 @import "modules/Footer";
 @import "modules/edit";
 @import "modules/user";
