--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -30,12 +30,18 @@
     .Job-images {
       display:grid;
       grid-gap: 1rem;
-      height: 300px;
+      // height: 300px;
       grid-template-columns: 2fr 1fr 1fr;
       &__list1 {
         background-color: gray;
         grid-row: 1 / span 2;
         grid-column: 1.5 / span 2;
+        height: 300px;
+        &--img {
+          height: 100%;
+          object-fit: cover;
+          width: 100%;
+        }
       }
       &__list {
         background-color: gray;
