--- a/app/views/matches/show.html.haml
+++ b/app/views/matches/show.html.haml
@@ -1,1 +1,1 @@
-= render partial: 'job_show', locals: { match: @match, review: @review }
+= render partial: 'job_show', locals: { match: @match, review: @review, reviews: @reviews }
