--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -1,32 +1,32 @@
 .Header {
   height: 80px;
+  width: 80vw;
+  margin: 0 auto;
   background-color: aqua;
   display: flex;
-  margin: 0 15px;
   .Header-logo {
     line-height: 80px;
-    width: 50%;
+    width: 70%;
   }
   .Header-right{
-    width: 50%;
+    width: 30%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     &__img {
       width: 60px;
       height: 60px;
+      border-radius: 100%;
       background-color: rosybrown;
-      &--file{
-      height: 20px;
-      object-fit: cover;
-      width: 100%;
-      }
     }
     &__text {
-      
+      font-size: 35px;
     }
     &__signup {
 
+    }
+    &__logout {
+      font-size: 35px;
     }
   }
 }
