--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -1,8 +1,8 @@
-
-.Top-wrapper
-  = image_tag 'image.png', class: 'Top-wrapper__image'
-  = link_to user_session_path, class: 'Top-wrapper__login' do
-    Login
+.Wrapper-match
+  .Top-wrapper
+    .Top-wrapper__login
+      = link_to user_session_path, class: 'Top-wrapper__login--text' do
+        Login
 
 .Info-wrapper
   .Title
