--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -1,15 +1,15 @@
 .Header {
   height: 80px;
-  width: 80vw;
+  width: 55vw;
   margin: 0 auto;
   background-color: aqua;
   display: flex;
   .Header-logo {
     line-height: 80px;
-    width: 70%;
+    width: 75%;
   }
   .Header-right{
-    width: 30%;
+    width: 25%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -18,15 +18,22 @@
       height: 60px;
       border-radius: 100%;
       background-color: rosybrown;
+      &--file {
+      display: block;
+      height: 60px;
+      border-radius: 100%;
+      object-fit: cover;
+      width: 100%;
+      }
     }
-    &__text {
-      font-size: 35px;
+    &__company {
+      font-size: 25px;
     }
     &__signup {
-
+      font-size: 25px;
     }
     &__logout {
-      font-size: 35px;
+      font-size: 25px;
     }
   }
 }
