--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -2,17 +2,23 @@
   box-sizing: border-box;
 }
 
+.Wrapper-match {
+  width: 55vw;
+  margin: 0 auto;
+}
+
 .Top-wrapper {
   background-color: rebeccapurple;
   position: relative;
-  &__image {
-    width: 100%;
-    height: 550px;
-  }
+  width: 100%;
+  height: 600px;
   &__login {
     position: absolute;
     top:400px;
     right:50%;
+    &--text {
+      color: seashell;
+    }
   }
 }
 
