--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -66,9 +66,26 @@
   }
 }
 
+.Bottom-wrapper {
+  display: flex;
+  .Bar-right { 
+    width: 200px;
+  }
+  .Bar-left {
+    width: 700px;
+    height: 700px;
+    background-color: lightblue;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    overflow-y: scroll;
+  }
+}
+
+
 .Message-wrapper {
-  // height: 200px;
-  background-color: saddlebrown;
+  background-color: saddlebrown;  
   .Message-title {
    text-align: center;
   }
@@ -84,50 +101,40 @@
 }
 
 
-.Bottom-wrapper {
-  height: 470px;
-  background-color: lightblue;
-  margin: 0 auto;
-  width: 1200px;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: 1fr 1fr 1fr;
-  overflow-y: scroll;
-  .Contents {
-    height: 450px;
-    width: 330px;
-    background-color: gold;
-    padding: 15px;
-    .Top-content {
-      background-color: gray;
-      width: 300px;
-      height: 250px;
-      &__img {
-      height: 250px;
-      object-fit: cover;
-      width: 100%;
-      }
+.Contents {
+  height: 277px;
+  width: 711px;
+  background-color: gold;
+  // padding: 15px;
+  .Top-content {
+    background-color: gray;
+    width: 300px;
+    height: 250px;
+    &__img {
+    height: 250px;
+    object-fit: cover;
+    width: 100%;
     }
-    .Middle-content {
-      &__left {
-      }
-      &__right {
-      }
+  }
+  .Middle-content {
+    &__left {
     }
-    .Bottom-content {
-      background-color: honeydew;
-      width: auto;
-      height: 90px;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      &__button {
-        
-      }
-      &__like {
-        width: 60px;
-        height: 60px;
-      }
+    &__right {
+    }
+  }
+  .Bottom-content {
+    background-color: honeydew;
+    width: auto;
+    height: 90px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    &__button {
+      
+    }
+    &__like {
+      width: 60px;
+      height: 60px;
     }
   }
 }
