--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -39,41 +39,41 @@
           2020/08/24
         .Message-lists__box--message
           キャプションキャプションキャプションキャプションキャプション
-
-.Message-wrapper
-  .Message-title
-    仕事内容一覧
-  .Search-box
-    = form_with url: search_matches_path, local: true, method: :get do |form|
-      = form.text_field :keyword, class: 'Seach-box__input', placeholder: '仕事を検索する'
-      = form.submit '検索', class: 'Search-box__button'
-
-.Title
-  .Title__text
-    登録案件一覧
-%ul.Bottom-wrapper
-  - @matches.each do |match|
-    %li.Contents
-      .Top-content
-        = image_tag match.image1.url, class: 'Top-content__img' if match.image1.present?
-      %table.Middle-content
-        %tr.Text-content
-          %td.Text-content__left
-            仕事内容
-          %td.Text-content__right
-            =match.title
-        %tr.Text-content
-          %td.Text-content__left
-            時給
-          %td.Text-content__right
-            =match.salary
-        %tr.Text-content
-          %td.Text-content__left
-            終業期間
-          %td.Text-content__right
-            =match.term
-      .Bottom-content
-        = link_to match_path(match.id), class: "Bottom-Contents__btn" do
-          編集
-        = link_to '#', class: "Bottom-Contents__btn", method: :delete do
-          いいね
+   
+   
+  .Bottom-wrapper 
+    %ul.Bar-left
+      - @matches.each do |match|
+        %li.Contents
+          .Top-content
+            = image_tag match.image1.url, class: 'Top-content__img' if match.image1.present?
+          %table.Middle-content
+            %tr.Text-content
+              %td.Text-content__left
+                仕事内容
+              %td.Text-content__right
+                =match.title
+            %tr.Text-content
+              %td.Text-content__left
+                時給
+              %td.Text-content__right
+                =match.salary
+            %tr.Text-content
+              %td.Text-content__left
+                終業期間
+              %td.Text-content__right
+                =match.term
+          .Bottom-content
+            = link_to match_path(match.id), class: "Bottom-Contents__btn" do
+              編集
+            = link_to '#', class: "Bottom-Contents__btn", method: :delete do
+              いいね
+              
+    .Bar-right
+      .Message-wrapper
+        .Message-title
+          仕事を検索する
+        .Search-box
+          = form_with url: search_matches_path, local: true, method: :get do |form|
+            = form.text_field :keyword, class: 'Seach-box__input', placeholder: '仕事を検索する'
+            = form.submit '検索', class: 'Search-box__button'
