--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -66,20 +66,17 @@
   }
 }
 
-.Bottom-wrapper {
+.Under-wrapper {
   display: flex;
-  .Bar-right { 
-    width: 200px;
-  }
   .Bar-left {
     width: 700px;
-    height: 700px;
+    height: 277px;
     background-color: lightblue;
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: 1fr 1fr 1fr;
     overflow-y: scroll;
+  }
+  .Bar-right { 
+    width: 200px;
+    margin-left: 50px;
   }
 }
 
@@ -100,12 +97,21 @@
   }
 }
 
+.Upper-job {
+  width: 671px;
+  display: flex;
+  justify-content: space-between;
+}
+
 
 .Contents {
   height: 277px;
   width: 711px;
   background-color: gold;
   // padding: 15px;
+  .Job-catch {
+
+  }
   .Top-content {
     background-color: gray;
     width: 300px;
