--- a/app/views/matches/_job_matches.html.haml
+++ b/app/views/matches/_job_matches.html.haml
@@ -41,34 +41,41 @@
           キャプションキャプションキャプションキャプションキャプション
    
    
-  .Bottom-wrapper 
-    %ul.Bar-left
+  .Under-wrapper
+    .Bar-left
+      .Upper-job
+        .Upper-job__new
+          NEW
+        .Upper-job__no
+          job.no eeeeeeee
       - @matches.each do |match|
-        %li.Contents
+        .Contents
+          .Job-catch
+            =match.title
           .Top-content
             = image_tag match.image1.url, class: 'Top-content__img' if match.image1.present?
-          %table.Middle-content
-            %tr.Text-content
-              %td.Text-content__left
+          .Middle-content
+            .Text-content
+              .Text-content__left
                 仕事内容
-              %td.Text-content__right
+              .Text-content__right
                 =match.title
-            %tr.Text-content
-              %td.Text-content__left
+            .Text-content
+              .Text-content__left
                 時給
-              %td.Text-content__right
+              .Text-content__right
                 =match.salary
-            %tr.Text-content
-              %td.Text-content__left
+            .Text-content
+              .Text-content__left
                 終業期間
-              %td.Text-content__right
+              .Text-content__right
                 =match.term
           .Bottom-content
             = link_to match_path(match.id), class: "Bottom-Contents__btn" do
               編集
             = link_to '#', class: "Bottom-Contents__btn", method: :delete do
-              いいね
-              
+              いいね！
+
     .Bar-right
       .Message-wrapper
         .Message-title
