--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -69,7 +69,7 @@
 .Under-wrapper {
   display: flex;
   .Bar-left {
-    width: 700px;
+    width: 710px;
     height: 277px;
     background-color: lightblue;
     overflow-y: scroll;
@@ -103,15 +103,17 @@
   justify-content: space-between;
 }
 
+.Job-catch {
+  width: 671px;
+  height: 65px;
+  background-color: silver;
+}
 
 .Contents {
   height: 277px;
   width: 711px;
   background-color: gold;
   // padding: 15px;
-  .Job-catch {
-
-  }
   .Top-content {
     background-color: gray;
     width: 300px;
