--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -5,6 +5,7 @@
 .Wrapper-match {
   width: 55vw;
   margin: 0 auto;
+  border-radius: 20px;
 }
 
 .Top-wrapper {
@@ -18,7 +19,7 @@
       &__image1 {
         background-color: gray;
         grid-row: 1 / span 2;
-        height: 700px;
+        height: 400px;
         &--img {            //実際の画像をいれる//
           height: 100%;
           object-fit: cover;
@@ -35,7 +36,7 @@
     }
   .Top-login{
     position: absolute;
-    top:400px;
+    top:50%;
     right:50%;
     &__text {
       color: seashell;
@@ -68,11 +69,10 @@
 
 .Under-wrapper {
   display: flex;
+  justify-content: space-between;
+  overflow-y: scroll;
   .Bar-left {
     width: 710px;
-    height: 277px;
-    background-color: lightblue;
-    overflow-y: scroll;
   }
   .Bar-right { 
     width: 200px;
@@ -84,65 +84,93 @@
 .Message-wrapper {
   background-color: saddlebrown;  
   .Message-title {
-   text-align: center;
+    text-align: center;
   }
   .Search-box {
     text-align: center;
     &__input {
-
     }
     &__button {
-
     }
   }
 }
 
+.Job-box {
+  height: 277px;
+  background-color: lightblue;
+  padding: 15px;
+  margin-bottom: 20px;
+  
+}
+
 .Upper-job {
-  width: 671px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 5px;
+  &__new {
+    font-size: 13px;
+  }
+  &__no {
+    font-size: 10px;
+  }
 }
 
 .Job-catch {
-  width: 671px;
-  height: 65px;
+  height: 60px;
   background-color: silver;
+  margin-bottom: 10px;
+  display: flex;
+  &__textarea {
+    width: 70%;
+    height: 60px;
+    display: table;
+    &--text {
+      display: table-cell;
+      vertical-align: middle;
+    }
+  }
+  &__box {
+    width: 30%;
+    font-size: 15px;
+    text-align: right;
+    line-height: 60px;
+    &--star {
+    }
+  }
 }
 
 .Contents {
-  height: 277px;
-  width: 711px;
   background-color: gold;
+  display: flex;
   // padding: 15px;
-  .Top-content {
+  .Content-left {
     background-color: gray;
-    width: 300px;
-    height: 250px;
+    width: 200px;
+    height: 150px;
     &__img {
-    height: 250px;
+    height: 150px;
     object-fit: cover;
     width: 100%;
     }
   }
-  .Middle-content {
+
+  .Content-right {
+    padding: 10px;
+  }
+
+  .Text-content {
+    display: flex;
     &__left {
+    margin: 0 15px 0 10px;
+    font-size: 20px;
     }
     &__right {
+    line-height: 30px;
+    font-size: 14px;
     }
-  }
-  .Bottom-content {
-    background-color: honeydew;
-    width: auto;
-    height: 90px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    &__button {
-      
-    }
-    &__like {
-      width: 60px;
-      height: 60px;
+    &__rightlong {
+    height: 30px;
+    font-size: 14px;
     }
   }
 }
