--- a/app/assets/stylesheets/modules/_Header.scss
+++ b/app/assets/stylesheets/modules/_Header.scss
@@ -1,8 +1,8 @@
 .Header {
   height: 80px;
-  width: 55vw;
+  width: 69vw;
   margin: 0 auto;
-  background-color: aqua;
+  // background-color: aqua;
   display: flex;
   .Header-logo {
     line-height: 80px;
