--- a/app/assets/stylesheets/modules/_job_matches.scss
+++ b/app/assets/stylesheets/modules/_job_matches.scss
@@ -3,9 +3,9 @@
 }
 
 .Wrapper-match {
-  width: 55vw;
+  width: 69vw;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 0px;
 }
 
 .Top-wrapper {
@@ -47,6 +47,7 @@
 
 .Info-wrapper {
   // height: 200px;
+  margin-top: 20px;
   background-color: burlywood;
   display: flex;
   .Title {
@@ -67,33 +68,45 @@
   }
 }
 
-.Under-wrapper {
+.Under-info {
+  margin-top: 20px;
   display: flex;
+  &__icon, &__text {
+    font-size: 20px;
+    &--folder {
+      color: darkturquoise;
+    }
+  }
+}
+
+
+.Under-wrapper {
+  margin-top: 30px;
   justify-content: space-between;
   overflow-y: scroll;
+  display: flex;
   .Bar-left {
     width: 710px;
+    &__upper {
+      &--text {
+        text-align: right;
+      }
+    }
+    &__middle {
+      margin-top: 20px;
+
+    }
   }
-  .Bar-right { 
-    width: 200px;
-    margin-left: 50px;
+  .Bar-right{
+  width: 240px;
+  margin-left: 20px;
+  border: 1px solid gainsboro;
+  border-radius: 5px;
+  padding: 10px;
   }
 }
 
 
-.Message-wrapper {
-  background-color: saddlebrown;  
-  .Message-title {
-    text-align: center;
-  }
-  .Search-box {
-    text-align: center;
-    &__input {
-    }
-    &__button {
-    }
-  }
-}
 
 .Job-box {
   height: 277px;
@@ -109,6 +122,11 @@
   margin-bottom: 5px;
   &__new {
     font-size: 13px;
+    color: red;
+    border: 1px solid red;
+    border-radius: 3px;
+    padding: 2px;
+
   }
   &__no {
     font-size: 10px;
@@ -145,32 +163,47 @@
   // padding: 15px;
   .Content-left {
     background-color: gray;
-    width: 200px;
+    width: 250px;
     height: 150px;
     &__img {
-    height: 150px;
-    object-fit: cover;
-    width: 100%;
+      height: 150px;
+      object-fit: cover;
+      width: 100%;
     }
   }
-
+  
   .Content-right {
     padding: 10px;
   }
-
+  
   .Text-content {
     display: flex;
     &__left {
-    margin: 0 15px 0 10px;
-    font-size: 20px;
+      margin: 0 15px 0 10px;
+      font-size: 20px;
     }
     &__right {
-    line-height: 30px;
-    font-size: 14px;
+      line-height: 30px;
+      font-size: 14px;
     }
     &__rightlong {
-    height: 30px;
-    font-size: 14px;
+      height: 30px;
+      font-size: 14px;
+    }
+  }
+}
+
+.Search-wrapper {
+  height: 100px;
+  .Search-title {
+    border-bottom: 1px solid burlywood;
+  }
+  .Search-box {
+    margin-top: 20px;
+    &__input {
+      width: 170px;
+    }
+    &__button {
     }
   }
 }
