--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -85,17 +85,16 @@
     .Vacancy-infos {
       width:100%;
       .Vacancy-item {
-        height: 60px;
-        border: 1px solid black;
+        height: 50px;
+        border: 1px solid lightslategrey;
         &__left {
           width: 25%;
           padding-left: 10px;
-          background-color: lightcoral;
+          background-color: lightsteelblue;
         }
         &__right {
           width: 75%;
           padding-left: 10px;
-          background-color: lightskyblue;
         }
       }
     }
@@ -114,7 +113,7 @@
   }
 
 .Review-wrapper {
-  margin-top: 10px;
+  margin-top: 30px;
   &__title {
   }
   &__list {
@@ -149,23 +148,54 @@
   }
 }
   
+.Review-top {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  border-bottom: 1px dashed lightyellow;
+  .Review-icons {
+    display: flex;
+    line-height: 40px;
+    &__face {
+      border-radius: 100%;
+      background-color: rosybrown;
+      height: 40px;
+      width: 40px;
+      &--image {
+        display: block;
+        height: 40px;
+        width: 40px;
+        border-radius: 100%;
+        object-fit: cover;
+      }
+    }
+    &__nickname{
+      padding-left: 5px;
+    }
+  }
+  .Review-time{
+    line-height: 40px;
+  }
+}
+
 .Review-infomation {
   background-color: lime;
   display: flex;
-  &__left   {
+  margin-top: 10px;
+  &__left {
+    padding: 10px;
     background-color: mediumaquamarine;
     width: 90%;
+    &--text {
+      height: 60px;
+      background-color: white;
+      margin: 5px 10px;
+    } 
   }
   &__right {
     background-color: mediumturquoise;
     width: 10%;
-    justify-content: space-around;
-    align-items: center;
-    &--edit {
-      display: block;
-    }
     &--destroy {
-      display: block;
     }
   }
 }
