--- a/app/views/matches/_job_show.html.haml
+++ b/app/views/matches/_job_show.html.haml
@@ -89,44 +89,48 @@
               チャットで質問する！
 
     .Review-wrapper
+      みんなの口コミ！（会社・仕事）
       .Review-wrapper__title
-        みんなの口コミ！（会社・仕事）
-      .Review-wrapper__list
         - @reviews.each do |review|
-          .Review-top
-            .Review-icons
-              .Reiview-icons__face
-                =image_tag current_user.image.to_s, class: 'Review-icons__face--image'
-              .Review-icons__nickname
-                =current_user.nickname
-            .Review-time
-              =review.updated_at
+          .Review-wrapper__list
+            .Review-top
+              .Review-icons
+                .Reiview-icons__face
+                  =image_tag current_user.image.to_s, class: 'Review-icons__face--image'
+                .Review-icons__nickname
+                  =current_user.nickname
+              .Review-time
+                =review.updated_at
 
-          .Review-infomation
-            .Review-infomation__left
-              .Review-infomation__left--good
+            .Review-infomation
+              .Review-infomation__left
+                .Review-infomation__left--good
+                【よかった点】
+                .Review-infomation__left--text
+                  =review.good
+                .Review-infomation__left--good
+                【わるかった点】
+                .Review-infomation__left--text
+                  =review.good
+              .Review-infomation__right
+                .Review-infomation__right--destroy
+                  = link_to job_review_path(review.job.id, review.id), method: :delete do
+                    =icon('far','trash-alt', class: 'Review-infomation__right--trash')
+
+    .Review-wrapper__up
+      = image_tag 'image.png', class: 'Review-wrapper__up--image'
+    .Review-wrapper__review
+      感想を教えて！
+    
+    =form_with model: [match, review], html: {class: ""}, local: true do |form|
+      .Review-wrapper__form
+        .Review-post
+          .Review-box
+            .Review-box__good
               【よかった点】
-              .Review-infomation__left--text
-                =review.good
-              .Review-infomation__left--good
+            = form.text_area :good, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+            .Review-box__bad
               【わるかった点】
-              .Review-infomation__left--text
-                =review.good
-            .Review-infomation__right
-              = link_to job_review_path(review.job.id, review.id), class: "Review-infomation__right--destroy", method: :delete do
-                削除
-
-      .Review-wrapper__up
-        = image_tag 'image.png', class: 'Review-wrapper__up--image'
-      .Review-wrapper__title
-        感想を教えて！
-      = form_with model: [match, review] , html: {class: "Review-wrapper__form"}, local: true do |form|
-        .Review-box
-          .Review-box__good
-            【よかった点】
-          = form.text_area :good, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
-          .Review-box__bad
-            【わるかった点】
-          = form.text_area :bad, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
-        .Review-button
-          = form.submit 'レビュー'
+            = form.text_area :bad, maxlength: 250, class: 'Review-box__text', placeholder: 'ここに文章を入力してください'
+      .Review-button
+        = form.submit '投稿する', class: 'Review-button__submit'
