--- a/app/assets/stylesheets/modules/_job_show.scss
+++ b/app/assets/stylesheets/modules/_job_show.scss
@@ -132,17 +132,19 @@
   &__form {
     height: 300px;
     padding: 15px;
-    background-color: moccasin;
+    background-color: gainsboro;
   }
 }
 
 .Review-box {
-  background-color: oldlace;
+  // background-color: oldlace;
   &__good {
   }
   &__text {
     width: 100%;
     height: 100px;
+    border: 1px solid lightslategrey;
+    border-radius: 5px;
   }
 }
 .Review-button {
@@ -188,7 +190,7 @@
 }
   
 .Review-infomation {
-  border: 1px solid lightsteelblue;
+  // border: 1px solid lightsteelblue;
   border-radius: 10px;
   display: flex;
   margin-top: 10px;
@@ -200,6 +202,9 @@
       height: 60px;
       background-color: white;
       margin: 5px 10px;
+      border-radius: 5px;
+      border: 1px solid lightsteelblue;
+      // border: 1px solid lightslategrey;
     } 
   }
   &__right {
