--- a/app/views/jobs/_Vacancies_form.html.haml
+++ b/app/views/jobs/_Vacancies_form.html.haml
@@ -1,114 +1,118 @@
-.Wrapper
+.Max-width
   .Title-wrapper
-    求人情報
-  = form_with model: job, html: {class: "Job-wrapper"}, local: true do |form|
-    .User-contents__title
-      【仕事のキャッチコピーを入力】
-      = form.text_field :title, maxlength: 64, class: 'Upper-contents__name', placeholder: 'ここに文章を入力してください'
-    .Image-contents
-      .Image-contents__post
-        【写真掲載】
-      %ul.Job-images
-        %li.Job-images__list1
-          = form.label :image1, class: "Job-images__list1--img" do
-            = icon('fas', 'image')
-            = form.file_field :image1, class: 'Job-images__list1--file'
-        %li.Job-images__list
-    .Vacancy-contents
-      .Vacancy-title
-        【求人詳細記入】
-      %table.Vacancy-infos
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            職種
-          %td.Vacancy-item__right
-            = form.text_field :occupation, placeholder: '営業事務'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            勤務地
-          %td.Vacancy-item__right
-            = form.text_field :description, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            給与
-          %td.Vacancy-item__right
-            = form.text_field :salary, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            アクセス
-          %td.Vacancy-item__right
-            = form.text_field :access, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            勤務時間
-          %td.Vacancy-item__right
-            = form.text_field :time, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            曜日・日数
-          %td.Vacancy-item__right
-            = form.text_field :week, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            募集人数
-          %td.Vacancy-item__right
-            = form.text_field :emplyee, placeholder: 'ここに文章を入力してください'
-        %tr.Vacancy-item
-          %td.Vacancy-item__left
-            契約期間
-          %td.Vacancy-item__right
-            = form.text_field :term, placeholder: 'ここに文章を入力してください'
-      .Staff-contents
-        .Staff-contents__title
-          【担当営業】
-        .Sales-staffs
-          .Sales-staff__name
-            "山田 太郎"
-          .Sales-staff__name
-            "石倉 香"
-          .Sales-staff__name
-            "山口 上"
-      .Pr-contents
-        .Pr-title
-          PRポイント
-        .Pr-box
-          .Pr-box__text
-            残業ほぼなしカジュアルOK！
-          .Pr-box__text
-            あっとホーム環境◎
-          .Pr-box__text
-            引継ぎしっかり！
-          .Pr-box__text
-            引継ぎしっかり
-    .Button-wrapper
-      = form.submit '掲載する', class: 'Button-wrapper__button'
+    求人情報を公開する
+  .Wrapper
+    = form_with model: job, html: {class: "Job-wrapper"}, local: true do |form|
+      .User-contents__title
+        【仕事のキャッチコピーを入力】
+        = form.text_field :title, maxlength: 64, class: 'Upper-contents__name', placeholder: 'ここに文章を入力してください'
+      .Image-contents
+        .Image-contents__post
+          【写真掲載】
+        %ul.Job-images
+          %li.Job-images__list1
+            = form.label :image1, class: "Job-images__list1--img" do
+              = icon('fas', 'image')
+              = form.file_field :image1, class: 'Job-images__list1--file'
+          %li.Job-images__list
 
-.Title
-  .Title__text
-    登録案件一覧
-%ul.Bottom-wrapper
-  - @lists.each do |list|
-    %li.Contents
-      .Top-content
-        = image_tag list.image1.url, class: 'Top-content__img' if list.image1.present?
-      %table.Middle-content
-        %tr.Text-content
-          %td.Text-content__left
-            仕事内容
-          %td.Text-content__right
-            =list.title
-        %tr.Text-content
-          %td.Text-content__left
-            時給
-          %td.Text-content__right
-            =list.salary
-        %tr.Text-content
-          %td.Text-content__left
-            終業期間
-          %td.Text-content__right
-            =list.term
-      .Bottom-content
-        = link_to edit_job_path(list.id), class: "Bottom-Contents__btn", method: :get do
-          編集
-        = link_to job_path(list.id), class: "Bottom-Contents__btn", method: :delete do
-          削除
+
+          
+      .Vacancy-contents
+        .Vacancy-title
+          【求人詳細記入】
+        %table.Vacancy-infos
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              職種
+            %td.Vacancy-item__right
+              = form.text_field :occupation, placeholder: '営業事務'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              勤務地
+            %td.Vacancy-item__right
+              = form.text_field :description, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              給与
+            %td.Vacancy-item__right
+              = form.text_field :salary, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              アクセス
+            %td.Vacancy-item__right
+              = form.text_field :access, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              勤務時間
+            %td.Vacancy-item__right
+              = form.text_field :time, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              曜日・日数
+            %td.Vacancy-item__right
+              = form.text_field :week, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              募集人数
+            %td.Vacancy-item__right
+              = form.text_field :emplyee, placeholder: 'ここに文章を入力してください'
+          %tr.Vacancy-item
+            %td.Vacancy-item__left
+              契約期間
+            %td.Vacancy-item__right
+              = form.text_field :term, placeholder: 'ここに文章を入力してください'
+        .Staff-contents
+          .Staff-contents__title
+            【担当営業】
+          .Sales-staffs
+            .Sales-staff__name
+              "山田 太郎"
+            .Sales-staff__name
+              "石倉 香"
+            .Sales-staff__name
+              "山口 上"
+        .Pr-contents
+          .Pr-title
+            PRポイント
+          .Pr-box
+            .Pr-box__text
+              残業ほぼなしカジュアルOK！
+            .Pr-box__text
+              あっとホーム環境◎
+            .Pr-box__text
+              引継ぎしっかり！
+            .Pr-box__text
+              引継ぎしっかり
+      .Button-wrapper
+        = form.submit '掲載する', class: 'Button-wrapper__button'
+
+  .Title
+    .Title__text
+      登録案件一覧
+  %ul.Bottom-wrapper
+    - @lists.each do |list|
+      %li.Contents
+        .Top-content
+          = image_tag list.image1.url, class: 'Top-content__img' if list.image1.present?
+        %table.Middle-content
+          %tr.Text-content
+            %td.Text-content__left
+              仕事内容
+            %td.Text-content__right
+              =list.title
+          %tr.Text-content
+            %td.Text-content__left
+              時給
+            %td.Text-content__right
+              =list.salary
+          %tr.Text-content
+            %td.Text-content__left
+              終業期間
+            %td.Text-content__right
+              =list.term
+        .Bottom-content
+          = link_to edit_job_path(list.id), class: "Bottom-Contents__btn", method: :get do
+            編集
+          = link_to job_path(list.id), class: "Bottom-Contents__btn", method: :delete do
+            削除
