--- a/app/assets/stylesheets/modules/_Vacancies_form.scss
+++ b/app/assets/stylesheets/modules/_Vacancies_form.scss
@@ -2,102 +2,59 @@
   box-sizing: border-box;
 }
 
-.Max-width {
-  width: 69vh;
+.Vacancies-width {
+  width: 69vw;
   background-color: gainsboro;
+  margin: 0 auto; 
 }
 
 .Wrapper {
-  margin: 0 auto; 
   max-width: 800px;
 
 }
 
-.Title-wrapper {
+.Open-wrapper {
   background-color: ghostwhite;
   font-size: 30px;
   height: 70px;
   padding-left: 98px;
 }
 
-.Job-wrapper{
-  .Upper-contents {
-    text-align: center;
-    background-color: khaki;
-  }
-  .Pr-contents {
-    background-color: lemonchiffon;
-    .Pr-title {
-
-    }
-    .Pr-box {
-      background-color:forestgreen;
-    }
-  }
-  .Image-contents {
-    .Job-images {
-      display:grid;
-      grid-gap: 1rem;
-      height: 300px;
-      grid-template-columns: 2fr 1fr 1fr;
-      &__list1 {
-        background-color: gray;
-        grid-row: 1 / span 2;
-        grid-column: 1.5 / span 2;
-        &--file {
-          display: none;
-        }
-      }
-      &__list {
-        background-color: gray;
-        &--file {
-          display: none;
-        }
-      }
-    }
-  }
-
-
-
-
-
-
-  
-  .Vacancy-contents {
-    .Vacancy-infos {
-      width: 800px;
-      .Vacancy-item {
-        &__left {
-          width: 25%;
-          background-color: lightcoral;
-        }
-        &__right {
-          width: 75%;
-          background-color: lightskyblue;
-        }
-      }
-    }
-  }
-  .Staff-contents {
-    background-color: gainsboro;
-    &__title {
-      background-color: gold;
-    }
-    .sales-staffs {
-      &__name {
-      }
-    }
-  }
-  .Pr-contents {
-    // 他のscssで同じものを作成している
-  }
-  .Button-wrapper {
-    // background-color: forestgreen;
-    text-align: center;
-    &__button {
-    }
+.Job-admin {
+  &__title{
+    margin:30px 0;
+    font-size: 25px;
   }
 }
+
+input[type="text"] {
+  width: 600px;
+  height: 50px;
+}
+
+.Company-images {
+  &__text{
+    margin:30px 0;
+    font-size: 25px;
+  }
+}
+
+.Vacancy {
+  
+}
+
+
+
+.Pr-contents {
+  // 他のscssで同じものを作成している
+}
+.Button-wrapper {
+  // background-color: forestgreen;
+  text-align: center;
+  &__button {
+  }
+}
+
 
 .Title {
   &__text {
